WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34987
[Android] V8 bindings are missing CHROMIUM and XPATH guards
https://bugs.webkit.org/show_bug.cgi?id=34987
Summary
[Android] V8 bindings are missing CHROMIUM and XPATH guards
Steve Block
Reported
2010-02-16 13:37:06 PST
V8 bindings are missing CHROMIUM and XPATH guards. This prevents building on Android, where Chromium-specific features are absent and XPATH is not enabled.
Attachments
Patch
(4.59 KB, patch)
2010-02-16 13:39 PST
,
Steve Block
no flags
Details
Formatted Diff
Diff
Patch
(4.59 KB, patch)
2010-02-16 15:28 PST
,
Steve Block
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2010-02-16 13:39:20 PST
Created
attachment 48823
[details]
Patch
WebKit Review Bot
Comment 2
2010-02-16 13:56:05 PST
Attachment 48823
[details]
did not build on chromium: Build output:
http://webkit-commit-queue.appspot.com/results/270508
Steve Block
Comment 3
2010-02-16 14:37:06 PST
(In reply to
comment #2
)
>
Attachment 48823
[details]
did not build on chromium: > Build output:
http://webkit-commit-queue.appspot.com/results/270508
This appears to be unrelated to my change - I guess because the Mac-Chromium build is currently broken
Steve Block
Comment 4
2010-02-16 15:28:21 PST
Created
attachment 48842
[details]
Patch
Ariya Hidayat
Comment 5
2010-02-16 15:43:34 PST
Comment on
attachment 48842
[details]
Patch LGTM.
Adam Barth
Comment 6
2010-02-16 18:04:08 PST
> This appears to be unrelated to my change - I guess because the Mac-Chromium > build is currently broken
Strange. The system is supposed to be robust to that. I keep an eye out for another instance.
WebKit Commit Bot
Comment 7
2010-02-17 02:21:33 PST
Comment on
attachment 48842
[details]
Patch Clearing flags on attachment: 48842 Committed
r54881
: <
http://trac.webkit.org/changeset/54881
>
WebKit Commit Bot
Comment 8
2010-02-17 02:21:38 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug