third_party/WebKit/WebCore/bindings/v8/V8Proxy.cpp
@@ -32,7 +32,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "V8Proxy.h"
 
-#include "ChromiumBridge.h"
 #include "CSSMutableStyleDeclaration.h"
 #include "DateExtension.h"
 #include "DOMObjectsInclude.h"
@@ -41,6 +40,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "InspectorTimelineAgent.h"
 #include "Page.h"
 #include "PageGroup.h"
+#include "PlatformBridge.h"
 #include "ScriptController.h"
 #include "StorageNamespace.h"
 #include "V8Binding.h"
@@ -260,7 +260,9 @@ bool V8Proxy::handleOutOfMemory()
         proxy->windowShell()->destroyGlobal();
     }
 
-    ChromiumBridge::notifyJSOutOfMemory(frame);
+#if PLATFORM(CHROMIUM)
+    PlatformBridge::notifyJSOutOfMemory(frame);
+#endif
 
     // Disable JS.
     Settings* settings = frame->settings();
@@ -357,20 +359,26 @@ v8::Local<v8::Value> V8Proxy::evaluate(const ScriptSourceCode& source, Node* nod
 
         // Compile the script.
         v8::Local<v8::String> code = v8ExternalString(source.source());
-        ChromiumBridge::traceEventBegin("v8.compile", node, "");
+#if PLATFORM(CHROMIUM)
+        PlatformBridge::traceEventBegin("v8.compile", node, "");
+#endif
 
         // NOTE: For compatibility with WebCore, ScriptSourceCode's line starts at
         // 1, whereas v8 starts at 0.
         v8::Handle<v8::Script> script = compileScript(code, source.url(), source.startLine() - 1);
-        ChromiumBridge::traceEventEnd("v8.compile", node, "");
+#if PLATFORM(CHROMIUM)
+        PlatformBridge::traceEventEnd("v8.compile", node, "");
 
-        ChromiumBridge::traceEventBegin("v8.run", node, "");
+        PlatformBridge::traceEventBegin("v8.run", node, "");
+#endif
         // Set inlineCode to true for <a href="javascript:doSomething()">
         // and false for <script>doSomething</script>. We make a rough guess at
         // this based on whether the script source has a URL.
         result = runScript(script, source.url().string().isNull());
     }
-    ChromiumBridge::traceEventEnd("v8.run", node, "");
+#if PLATFORM(CHROMIUM)
+    PlatformBridge::traceEventEnd("v8.run", node, "");
+#endif
 
 #if ENABLE(INSPECTOR)
     if (InspectorTimelineAgent* timelineAgent = m_frame->page() ? m_frame->page()->inspectorTimelineAgent() : 0)
