third_party/WebKit/WebCore/bindings/v8/V8Proxy.h
@@ -32,7 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef V8Proxy_h
 #define V8Proxy_h
 
-#include "ChromiumBridge.h"
+#include "PlatformBridge.h"
 #include "ScriptSourceCode.h" // for WebCore::ScriptSourceCode
 #include "SecurityOrigin.h" // for WebCore::SecurityOrigin
 #include "SharedPersistent.h"
@@ -45,8 +45,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <wtf/PassRefPtr.h> // so generated bindings don't have to
 #include <wtf/Vector.h>
 
-#ifdef ENABLE_DOM_STATS_COUNTERS
-#define INC_STATS(name) ChromiumBridge::incrementStatsCounter(name)
+#if defined(ENABLE_DOM_STATS_COUNTERS) && PLATFORM(CHROMIUM)
+#define INC_STATS(name) PlatformBridge::incrementStatsCounter(name)
 #else
 #define INC_STATS(name)
 #endif
